# SpectreDartAPI

./: README.md  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: dart_spectre_api.dart  dart_spectre_api_method_channel.dart  dart_spectre_api_platform_interface.dart
test/: dart_spectre_api_method_channel_test.dart  dart_spectre_api_test.dart
windows/: CMakeLists.txt  dart_spectre_api_plugin.cpp  dart_spectre_api_plugin.h  dart_spectre_api_plugin_c_api.cpp
windows/c_spectre_api/: CMakeLists.txt
windows/include/dart_spectre_api/: dart_spectre_api_plugin_c_api.h
